--- a/index.html
+++ b/index.html
@@ -5,15 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Project</title>
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Project Starter</h1>
-    <h2>Test</h2>
-    <h3>0/50</h3>
+    <div class="container">
+        <div id="box-login">
+            <h1>Wassup!</h1>
+            <div id="form"> 
+                <div class="form-control">
+                    <input id="login" type="text" required>
+                    <label for="login">Login</label>
+                </div>
 
 
+                <div class="form-control">
+                    <input id="password" type="password" required>
+                    <label for="password">Password</label>
+                </div>
+
+                <button id="btnSubmit" class="btn">Login</button>
+
+
+                <p class="text">
+                    Don't have an account?
+                    <a  href="#">Register</a>
+                </p>
+
+            </div>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
